new update after holiday

--- a/assets/styles/fonts.sass
+++ b/assets/styles/fonts.sass
@@ -3,8 +3,12 @@
   src: url("../fonts/Lexend-Regular.ttf")
 
 @font-face
-  font-family: Minion Pro
+  font-family: Minion-Pro
   src: url("../fonts/MinionPro-Regular.woff")
+
+@font-face
+  font-family: Minion-Pro-Medium
+  src: url("../fonts/MinionPro-Medium.otf")
 
 @font-face
   font-family: Wermena
@@ -53,7 +57,7 @@ h2
 
 .container
   p
-    font-family: "Minion Pro", serif !important
+    font-family: "Minion-Pro", serif !important
     font-size: $p-font-size
 
 
@@ -65,9 +69,13 @@ h2
 
 
 #production-design
-  font-family: "Minion Pro", serif !important
+  font-family: "Minion-Pro-Medium", serif !important
   font-size: $production-font-size
-  //font-weight: 600
+
+#contact
+  font-family: "Minion-Pro", serif !important
+  font-size: $contact-font-size
+
 
 .links
   p
