--- a/assets/styles/main.sass
+++ b/assets/styles/main.sass
@@ -63,6 +63,11 @@
 
 .carousel__prev, .carousel__next
   // space from border
-  width: 173px !important
+  //width: 173px !important
+  width: 90vw !important
   top: 90% !important
+
+
+.no-scroll
+  overflow: hidden
 
