--- a/assets/styles/variables.sass
+++ b/assets/styles/variables.sass
@@ -17,11 +17,11 @@ $container-margin-phone: 3vw
 $container-margin-mini: 2vw
 
 
-// fonts
+// font-size
 
 $kasia-font-size: 22px
 
-$production-font-size: 15px
+$production-font-size: 21px
 
 $p-font-size: 20px
 $p-font-size-tablet: 20px
@@ -32,6 +32,9 @@ $h2-font-size: 21px
 $h2-font-size-tablet: 19px
 $h2-font-size-phone: 22px
 $h2-font-size-mini: 22px
+
+$contact-font-size: 30px
+
 
 // modal
 
