meta info update

--- a/assets/styles/main.sass
+++ b/assets/styles/main.sass
@@ -63,8 +63,9 @@
 
 .carousel__prev, .carousel__next
   // space from border
-  //width: 173px !important
-  width: 90vw !important
+  width: 173px !important
+  padding-left: 200px
+  //width: 90vw !important
   top: 90% !important
 
 
