--- a/assets/styles/fonts.sass
+++ b/assets/styles/fonts.sass
@@ -40,6 +40,7 @@ a:active
 a:hover
   text-decoration: none
   color: rgba(0, 0, 0, 0.92)
+  text-shadow: 0 0 0.5px rgb(0, 0, 0), 0 0 0.5px rgb(0, 0, 0), 0 0 0.5px rgb(0, 0, 0)
 
 a
   color: black
@@ -65,6 +66,7 @@ h2
   font-family: Raleway, serif
   letter-spacing: 4px
   font-size: $kasia-font-size
+
 
 
 #production-design
