--- a/assets/styles/fonts.sass
+++ b/assets/styles/fonts.sass
@@ -12,7 +12,7 @@
 
 @font-face
   font-family: Wermena
-  src: url("../fonts/WremenaLight.woff") format("woff")
+  src: url("../fonts/WremenaLight.woff")
 
 @font-face
   font-family: Raleway
