add responsive for iPhone SE

--- a/assets/styles/breakpoints.sass
+++ b/assets/styles/breakpoints.sass
@@ -1,11 +1,12 @@
-// Small tablets and large smartphones (landscape view)
-$screen-sm-min: 576px
+// Desktop
+$screen-desktop: 1200px
 
-// Small tablets (portrait view)
-$screen-md-min: 768px
+// Tablet
+$screen-tablet: 992px
 
-// Tablets and small desktops
-$screen-lg-min: 992px
+// Big phone
+$screen-big-phone: 768px
 
-// Large tablets and desktops
-$screen-xl-min: 1200px
+// Small phone
+$screen-small-phone: 576px
+
