--- a/assets/styles/fonts.sass
+++ b/assets/styles/fonts.sass
@@ -46,9 +46,9 @@ a
 
 
 // dates 2020 - 2022
-h2
+h1
   font-family: Raleway, serif
-  font-size: $h2-font-size
+  font-size: $h1-font-size
   font-weight: 200
   letter-spacing: 4px
 
@@ -56,22 +56,7 @@ h2
 .container
   p
     font-family: "Minion-Pro", serif !important
-    font-size: $p-font-size
-
-
-#kasia
-  font-family: Raleway, serif
-  letter-spacing: 4px
-  font-size: $kasia-font-size
-
-
-#production-design
-  font-family: "Minion-Pro-Medium", serif !important
-  font-size: $production-font-size
-
-#contact
-  font-family: "Minion-Pro", serif !important
-  font-size: $contact-font-size
+    font-size: 1.35rem
 
 
 .links
