--- a/assets/styles/variables.sass
+++ b/assets/styles/variables.sass
@@ -1,39 +1,26 @@
+@import "breakpoints"
+
 // header
 
-//$header-height: 110px
 $header-height: 6.875rem
-$header-height-tablet: 60px
-$header-height-phone: 60px
-$header-height-mini: 60px
+$h1-font-size: 1.44rem
 
-//$header-margin: 50px
-$header-margin: 3.125rem
-$header-margin-tablet: 10px
-$header-margin-phone: 3px
-$header-margin-mini: 3px
+
+.top-margin
+  top: calc(100% - 3.125rem - 10px) !important
+
+.bottom-margin
+  bottom: 3.125rem
+
+.page-margin
+  margin: 3.125rem
+
+.carousel__prev, .carousel__next
+  top: calc(100% - 3.125rem - 10px) !important
 
 
 $container-margin: 19vw
-$container-margin-tablet: 14vw
-$container-margin-phone: 3vw
-$container-margin-mini: 2vw
 
-
-// font-size
-
-$kasia-font-size: 1.58rem
-
-$production-font-size: 1rem
-
-$p-font-size: 1.35rem
-$p-font-size-tablet: 1.25rem
-$p-font-size-phone: 18px
-$p-font-size-mini: 18px
-
-$h2-font-size: 1.44rem
-$h2-font-size-tablet: 19px
-$h2-font-size-phone: 22px
-$h2-font-size-mini: 22px
 
 $contact-font-size: 1.5rem
 
@@ -41,134 +28,77 @@ $contact-font-size: 1.5rem
 // modal
 
 $modal-width: 100%
-$modal-width-tablet: 380px
-$modal-width-phone: 320px
-$modal-width-mini: 320px
+
 
 // layout
 
 $container-width: 70%
 
 
-$green-neon: #24E103FF
-$green-neon-transparent: rgba(36, 225, 3, 0.66)
-
-$main-color: black
-
-$black: black
-$black-transparent: rgba(0, 0, 0, 0.65)
-
-
 // desktop
-@media only screen and (max-width: 1830px)
+@media only screen and (min-width: $screen-desktop)
   html
     font-size: 100%
 
 
 // tablet
-@media (min-width: 451px) and (max-width: 1250px)
+@media (min-width: $screen-tablet) and (max-width: $screen-desktop)
   html
-    font-size: 80%
+    font-size: 95%
 
 
-// phone
-@media (min-width: 380px) and (max-width: 450px)
+// big phone
+@media (min-width: $screen-big-phone) and (max-width: $screen-tablet)
   html
-    font-size: 70%
+    font-size: 90%
 
 
-// mini
-@media only screen and (max-width: 379px)
+// small phone
+@media (min-width: $screen-small-phone) and (max-width: $screen-big-phone)
   html
-    font-size: 60%
+    font-size: 85%
 
-//// desktop
-//@media only screen and (max-width: 1830px)
-//  .white-background
-//    background-color: white
-//
-//
-//
-//
-//// tablet
-//@media (min-width: 451px) and (max-width: 1250px)
-//  #header
-//    padding-bottom: $header-margin-tablet !important
-//    height: $header-height-tablet !important
-//  .header__kasia
-//    margin: $header-margin-tablet !important
-//
-//  .hamburger
-//    margin: $header-margin-tablet !important
-//
-//  .ham-closed
-//    top: $header-margin-tablet !important
-//    right: $header-margin-tablet !important
-//
-//  .container
-//    padding-bottom: $header-height-tablet * 2 !important
-//    margin-left: $container-margin-tablet !important
-//    margin-right: $container-margin-tablet !important
-//    width: calc(100% - 2 * $container-margin-tablet)
-//
-//  p
-//    font-size: $p-font-size-tablet !important
-//
-//  .modal
-//    width: $modal-width-tablet !important
-//
-//
-//// phone
-//@media (min-width: 380px) and (max-width: 450px)
-//  #header
-//    padding-bottom: $header-margin-phone !important
-//    height: $header-height-phone !important
-//  .header__kasia
-//    margin: $header-margin-phone !important
-//
-//  .hamburger
-//    margin: $header-margin-phone !important
-//
-//  .ham-closed
-//    top: $header-margin-phone !important
-//    right: $header-margin-phone !important
-//
-//  .container
-//    padding-bottom: $header-height-phone * 2 !important
-//    margin-left: $container-margin-phone !important
-//    margin-right: $container-margin-phone !important
-//    width: calc(100% - 2 * $container-margin-phone)
-//
-//  p
-//    font-size: $p-font-size-phone !important
-//
-//  .modal
-//    width: $modal-width-phone !important
-//
-//
-//// mini
-//@media only screen and (max-width: 379px)
-//  #header
-//    padding-bottom: $header-margin-mini !important
-//    height: $header-height-mini !important
-//  .header__kasia
-//    margin: $header-margin-mini !important
-//
-//  .hamburger
-//    margin: $header-margin-mini !important
-//
-//  .ham-closed
-//    top: $header-margin-mini !important
-//    right: $header-margin-mini !important
-//
-//  .container
-//    padding-bottom: $header-height-mini * 2 !important
-//    margin-left: $container-margin-mini !important
-//    margin-right: $container-margin-mini !important
-//    width: calc(100% - 2 * $container-margin-mini)
-//
-//    p
-//      font-size: $p-font-size-mini !important
-//
-//  .modal
-//    width: $modal-width-mini !important
+
+// mini phone
+@media (max-width: $screen-small-phone)
+  html
+    font-size: 82%
+
+  .container
+    width: calc(100% - 2rem) !important
+
+  .block-left
+    min-width: 0.75rem !important
+
+  .block-right
+    min-width: 1rem !important
+
+  .top-margin
+    top: calc(100% - 1.125rem - 10px) !important
+
+  .bottom-margin
+    bottom: 3.125rem
+
+  .page-margin
+    margin: 0.7rem
+
+  .carousel__prev, .carousel__next
+    top: calc(100% - 2.5rem - 10px) !important
+
+  .carousel__prev
+    justify-content: start
+    margin-left: 19px
+
+  .carousel__next
+    justify-content: end
+    margin-right: 19px
+
+  #filmography
+    padding-left: 0 !important
+
+  #about
+    width: 100% !important
+
+  #contact
+    font-size: 1.6rem !important
+
