Revert "add responsive for iPhone SE"
This reverts commit ea76451a0c73b0c438bbfa51dc0cedd9e6782645.

--- a/assets/styles/breakpoints.sass
+++ b/assets/styles/breakpoints.sass
@@ -1,12 +1,11 @@
-// Desktop
-$screen-desktop: 1200px
+// Small tablets and large smartphones (landscape view)
+$screen-sm-min: 576px
 
-// Tablet
-$screen-tablet: 992px
+// Small tablets (portrait view)
+$screen-md-min: 768px
 
-// Big phone
-$screen-big-phone: 768px
+// Tablets and small desktops
+$screen-lg-min: 992px
 
-// Small phone
-$screen-small-phone: 576px
-
+// Large tablets and desktops
+$screen-xl-min: 1200px
