--- a/assets/styles/fonts.sass
+++ b/assets/styles/fonts.sass
@@ -44,39 +44,31 @@ a:hover
 a
   color: black
 
-
-// dates 2020 - 2022
+// dates 2020 - 2022, links
 h2
   font-family: Raleway, serif
-  font-size: $h2-font-size
   font-weight: 200
   letter-spacing: 4px
 
 
-.container
+.box
   p
     font-family: "Minion-Pro", serif !important
-    font-size: $p-font-size
+
+// ABOUT, FILMOGRAPHY, CONTACT
+.links
+  font-family: Raleway, serif
+  letter-spacing: 1.5px
+
+
+#production-design
+  font-family: "Minion-Pro-Medium", serif !important
 
 
 #kasia
   font-family: Raleway, serif
   letter-spacing: 4px
-  font-size: $kasia-font-size
 
-
-#production-design
-  font-family: "Minion-Pro-Medium", serif !important
-  font-size: $production-font-size
 
 #contact
   font-family: "Minion-Pro", serif !important
-  font-size: $contact-font-size
-
-
-.links
-  p
-    letter-spacing: 1.5px
-    font-family: Raleway, serif
-
-
