--- a/assets/styles/main.sass
+++ b/assets/styles/main.sass
@@ -1,72 +1,20 @@
 \:root
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif
-  line-height: 1.5
-  font-weight: 400
-  color: black
-  background-color: white
   text-rendering: optimizeLegibility
   -webkit-font-smoothing: antialiased
   -moz-osx-font-smoothing: grayscale
   -webkit-text-size-adjust: 100%
+  --page-margin-xl: 15vw
+  --page-margin-lg: 50px
+  --page-margin-md: 25px
+  --page-margin-sm: 15px
+  --h2-font-lg: 19.5px
 
-  $vc-nav-width: 70px !important
-
-
-  html, body, div, input, p, span, object, iframe, figure, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, code, em, img, small, strike, strong, sub, sup, tt, b, u, i, ol, ul, li, fieldset, form, label, table, caption, tbody, tfoot, thead, tr, th, td, main, canvas, embed, footer, header, nav, section, video
-    margin: 0
-    padding: 0
-    border: 30px
-    vertical-align: baseline
-    text-rendering: optimizeLegibility
-    -webkit-font-smoothing: antialiased
-    text-size-adjust: none
-
-#app
-  height: 100vh
+.box
+  padding-bottom: var(--page-margin-lg)
+  margin-top: min(35vw, 200px)
 
 
-.container
-  //background-color: indianred
-  padding-bottom: $header-height * 1 !important
-  margin-top: 200px !important
-  position: absolute
-  left: 50%
-  transform: translate(-50%, 0)
-  width: $container-width !important
-
-.no-scroll
-  overflow: hidden
-
-.invert
-  filter: invert(1)
-
-.transparent
-  color: transparent
-
-.carousel
-  &__icon
-    color: rgba(255, 255, 255, 0.65) !important
 
 
-.carousel svg
-  // arrow size
-  width: 80px !important
 
-
-.carousel__prev, .carousel__next
-  width: 173px !important
-  top: calc(100% - $header-margin - 10px) !important
-
-.carousel__prev
-  left: -10px !important
-
-.carousel__next
-  right: -10px !important
-
-.carousel__icon:hover
-  fill: white !important
-
-
-.carousel__liveregion.carousel__sr-only
-  bottom: 0
 
