--- a/assets/styles/fonts.sass
+++ b/assets/styles/fonts.sass
@@ -56,18 +56,18 @@ h2
     font-family: "Minion-Pro", serif !important
 
 // ABOUT, FILMOGRAPHY, CONTACT
-.links
+.modal-link
   font-family: Raleway, serif
   letter-spacing: 1.5px
 
 
 #production-design
   font-family: "Minion-Pro-Medium", serif !important
-
+  font-size: 1rem
 
 #kasia
   font-family: Raleway, serif
-  letter-spacing: 4px
+  font-size: 1.58rem
 
 
 #contact
