--- a/assets/styles/fonts.sass
+++ b/assets/styles/fonts.sass
@@ -66,9 +66,9 @@ h2
   font-size: 1rem
 
 #kasia
-  font-family: Raleway, serif
-  font-size: 1.58rem
+  font-family: Raleway-Medium, serif
+  font-weight: 100
 
 
 #contact
-  font-family: "Minion-Pro", serif !important
+  font-family: "Raleway", serif !important
